--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
     "express-fileupload": "^1.4.0",
+    "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.8.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
